# speckit-hackaton

./: .gitignore  docusaurus.config.ts  final_status.txt  hackaton-specify - Shortcut.lnk  package-lock.json  package.json  rag_chatbot_agent.py  status.txt  types.d.ts
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
blog/: lab1-pub-sub.md
docs/: 01-isaac-intro.md  01-vla-intro.md  03-physical-ai-foundations.md  06-sensor-systems.md  07-ros2-services-actions.md  09-ros2-launch-files-parameters.md  18-humanoid-kinematics-dynamics.md  19-bipedal-locomotion.md  20-humanoid-manipulation.md  21-human-robot-interaction.md  24-multimodal-interaction.md  _category_.json
history/adr/: 1-textbook-generation-and-deployment-stack.md
my-book/: .env.example  docusaurus.config.ts  package-lock.json
my-book/docs/: 01-intro.md  02-nodes-topics.md  04-digital-to-physical-ai.md  05-humanoid-robotics-landscape.md  08-ros2-packages-python.md  10-gazebo-setup.md  11-urdf-sdf.md  (+9 more)
rag-backend/: .env.example  .gitignore  Quickstart.md  README.md  check_qdrant.py  delete_chunks.py  main.py  pyproject.toml  rag.db  requirements.txt  run_ingest.py
rag-backend/src/: database.py  gemini_config.py  ingest.py  main.py  models.py
rag-backend/src/api/: query.py  translation.py
rag-backend/src/core/: config.py  database.py  embeddings.py  exceptions.py  logger.py  qdrant.py
rag-backend/src/models/: db.py  query.py  translation.py
rag-backend/src/scripts/: ingest.py
rag-backend/src/services/: content_chunk_dao.py  rag_service.py  translation_service.py
(+116 files in other folders)
