[tool.poetry]
name = "rag-backend"
version = "0.1.0"
description = "RAG Chatbot Backend for the Physical AI Textbook"
authors = ["Specify Agent <agent@specify.io>"]
package-mode = false   # ✅ add this line

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = "*"
qdrant-client = "*"
psycopg2-binary = "*"
pydantic = "*"
python-dotenv = "*"
sqlalchemy = "*"
loguru = "*"
google-generativeai = "^0.8.6"
voyageai = "^0.1.1"
fastembed = "^0.7.4"
onnxruntime = "^1.23.2"
pydantic-settings = "^2.12.0"
openai = "^2.14.0"
google-genai = "^1.56.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
